--- a/net.akehurst.kotlin.gui/gradle.properties
+++ b/net.akehurst.kotlin.gui/gradle.properties
@@ -1,4 +1,4 @@
 version_project 0.0.1
 
-version_korlibs = 1.15.1
-version_korge = 10-SNAPSHOT
+version_korlibs = 20-alpha-1
+version_korge = 20-alpha-1
