--- a/net.akehurst.kotlin.gui/gradle.properties
+++ b/net.akehurst.kotlin.gui/gradle.properties
@@ -2,3 +2,5 @@ version_project 0.0.1
 
 version_korlibs = 20-alpha-1
 version_korge = 20-alpha-1
+
+org.gradle.jvmargs=-Xmx5g -XX:+HeapDumpOnOutOfMemoryError -Dfile.encoding=UTF-8
